--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="/tweets.html">Tweets<a>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur accusantium temporibus, enim voluptatum doloremque, iure aliquid deserunt at amet quae inventore! Sapiente, est. At ipsam cum deleniti blanditiis ipsum ab.</p> <br>
 
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Consequatur accusantium temporibus, enim voluptatum doloremque, iure aliquid deserunt at amet quae inventore! Sapiente, est. At ipsam cum deleniti blanditiis ipsum ab.</p> <br>
